syntax = "proto3";

package psm.state.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/pentops/protostate/gen/state/v1/psm_pb";

extend google.protobuf.MessageOptions {
  PSMOptions psm = 90443400;
  EventTypeObjectOptions event_type = 90443402;
}

message PSMOptions {
  string name = 1;
}

message EventTypeObjectOptions {}

extend google.protobuf.FieldOptions {
  FieldOptions field = 90443405;
  EventTypeField event_type_field = 90443404;
}

message FieldOptions {
  // the field is the primary key of the state, or is one field in a multi-key
  // primary key for the state object. This field must exist on both the event
  // and the state
  bool primary_key = 1;
}

message EventTypeField {
  bool sub_key = 1;
}

extend google.protobuf.ServiceOptions {
  StateQueryServiceOptions state_query = 90443405;
}

message StateQueryServiceOptions {
  string name = 1;
}

extend google.protobuf.MethodOptions {
  StateQueryMethodOptions state_query_method = 90443406;
}

message StateQueryMethodOptions {
  bool get = 1;
  bool list = 2;
  bool list_events = 3;

  // use name here instead of the service option to put multiple state query
  // methods in one service
  string name = 4;
}
